<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Inscription">
    <EditText
        android:id="@+id/inscription_nom_user"
        android:hint="Nom d'utilisateur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <EditText
        android:id="@+id/inscription_email"
        android:hint="@string/exemple_hotmail_fr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/inscription_mot_de_passe"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/inscription_confirme_mot_de_passe"
        android:hint="@string/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/button_confirmer"
        android:text="confirmer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="submit"/>




</LinearLayout>